<resources>
    <string name="app_name">Aplikasi User</string>
    <string name="login_to_user">Login to User</string>
    <string name="don_t_have_account">Don\'t have account ?</string>
    <string name="sign_up">Sign Up</string>
    <string name="or">Or</string>
    <string name="login">Login</string>
    <string name="enter_your_password">Enter your password</string>
    <string name="email">Email</string>
    <string name="enter_yout_email">Enter yout email</string>
    <string name="register_user">Register user</string>
    <string name="name">Name</string>
    <string name="ex_kori_lesmana">ex : Kori lesmana</string>
    <string name="phone">Phone</string>
    <string name="ex_082230512197">ex : 082230512197</string>
    <string name="password">Password</string>
    <string name="register">Register</string>
    <string name="remember_me">Remember me</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="tab_text_1">Busana</string>
    <string name="tab_text_2">Electronic</string>
    <string name="tab_text_3">Lainnya</string>
    <string name="beranda">Beranda</string>
    <string name="free_shipping_nduring_covid_19">Free Shipping \nDuring Covid - 19</string>
    <string name="komputer">Komputer</string>
    <string name="smart_phone">Smart Phone</string>
    <string name="pria">Pria</string>
    <string name="perempuan">Perempuan</string>
    <string name="enter_your_phone_number">Enter your phone number</string>
    <string name="busana">Busana</string>
    <string name="elekronik">Elektronik</string>
    <string name="book">Buku</string>
    <string name="brandel">Brandel</string>
    <string name="logout">Logout</string>
    <string name="deskripsi_barang">Deskripsi barang</string>
    <string name="detail_barang">Detail barang</string>
    <string name="buku">Buku</string>
    <string name="other">Other</string>

</resources>