<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center_horizontal"
    tools:context=".ui.RegisterActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbarHome"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        >

        <ImageView
            android:id="@+id/imgBack"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_back_toolbar"
            app:tint="@color/black" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/register"
            android:fontFamily="@font/poppin_semibold"
            android:textSize="18sp"
            android:paddingTop="5dp"
            android:textColor="@color/black"
            android:layout_marginStart="20dp"
            />

    </androidx.appcompat.widget.Toolbar>

    <RelativeLayout
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:background="@drawable/bg_logo"
        android:layout_marginTop="20dp"
        >
        <ImageView
            android:layout_width="55dp"
            android:layout_height="55dp"
            android:layout_centerInParent="true"
            android:src="@drawable/logo_belanja" />
    </RelativeLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/register_user"
        android:fontFamily="@font/poppin_semibold"
        android:textColor="@color/black"
        android:textSize="18sp"
        android:gravity="center_horizontal"
        android:layout_marginTop="30dp"
        android:layout_marginStart="14dp"
        android:layout_marginEnd="14dp"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/name"
        android:textColor="@color/black"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="14dp"
        android:fontFamily="@font/poppin_semibold"
        android:textSize="14sp"
        android:layout_gravity="start"
        android:layout_marginTop="10dp"
        />
    <EditText
        android:id="@+id/edtName"
        android:layout_width="match_parent"
        android:layout_height="54dp"
        android:background="@drawable/bg_edittext"
        android:layout_marginStart="14dp"
        android:layout_marginEnd="14dp"
        android:layout_marginTop="5dp"
        android:hint="@string/ex_kori_lesmana"
        android:textSize="14sp"
        android:fontFamily="@font/poppin_regular"
        android:paddingStart="14dp"
        android:paddingEnd="14dp"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/phone"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="14dp"
        android:fontFamily="@font/poppin_semibold"
        android:textSize="14sp"
        android:textColor="@color/black"
        android:layout_gravity="start"
        android:layout_marginTop="10dp"
        />
    <EditText
        android:id="@+id/edtPhone"
        android:layout_width="match_parent"
        android:layout_height="54dp"
        android:background="@drawable/bg_edittext"
        android:layout_marginStart="14dp"
        android:layout_marginEnd="14dp"
        android:layout_marginTop="5dp"
        android:hint="@string/ex_082230512197"
        android:textSize="14sp"
        android:fontFamily="@font/poppin_regular"
        android:paddingStart="14dp"
        android:paddingEnd="14dp"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/password"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="14dp"
        android:fontFamily="@font/poppin_semibold"
        android:textSize="14sp"
        android:textColor="@color/black"
        android:layout_gravity="start"
        android:layout_marginTop="10dp"
        />
    <EditText
        android:id="@+id/edtPassword"
        android:layout_width="match_parent"
        android:layout_height="54dp"
        android:background="@drawable/bg_edittext"
        android:layout_marginStart="14dp"
        android:layout_marginEnd="14dp"
        android:layout_marginTop="5dp"
        android:hint="@string/enter_your_password"
        android:textSize="14sp"
        android:fontFamily="@font/poppin_regular"
        android:paddingStart="14dp"
        android:paddingEnd="14dp"
        />


    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnRegister"
        android:layout_width="match_parent"
        android:layout_height="63dp"
        android:layout_marginStart="14dp"
        android:layout_marginEnd="14dp"
        android:layout_marginTop="39dp"
        android:background="@drawable/bg_button"
        android:text="@string/register"
        android:textAllCaps="false"
        android:fontFamily="@font/poppin_semibold"
        android:textSize="18sp"
        android:textColor="@color/white"
        android:layout_marginBottom="20dp"
        />

    <ProgressBar
        android:id="@+id/pbLoading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:progressTint="@color/colorPrimary"
        android:visibility="gone"
        android:layout_marginTop="39dp"
        android:layout_marginBottom="20dp"
        android:layout_gravity="center_horizontal"
        />
</LinearLayout>